# hs-blackbox-agent

./: .gitignore  AGENTS.md  FLOW.md  PB_INTEGRATION.md  PB_TASK_INVENTORY.md  README.md  SHAPES.md  STATUS.md  TODO.md  hs-blackbox-agent.cabal
app/: Main.hs
corpus/probe-plan-seeds/: README.md
corpus/probe-plan-seeds/bat/grader/: ATTRIBUTION.md
corpus/probe-plan-seeds/bat/grader/branches/39dee6c2e271/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/3c9675c0f84e/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/492d929b9118/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/4e219826c927/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/576ea19c5b99/eval/: conftest.py  run.sh  test_server.py
corpus/probe-plan-seeds/bat/grader/branches/5bcfd10e370e/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/887e021a9afd/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/889188d5a491/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/a610e071591b/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/b085a6cde326/eval/: run.sh
corpus/probe-plan-seeds/bat/grader/branches/c2e6cec3647e/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/c37849812923/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/df5f5f14e9a6/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/ebb3d4162852/eval/: README.md  run.sh
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/: run.sh
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_bat_final/: stdin_valid_json_input.json
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_bat_gaps/: body_param.golden  print_H.golden  stdin_json.golden  url_colon.golden  url_colon_port_noslash.golden
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_bench/: basic_structure.txt
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_color_output/: print_A_html.golden  print_A_json.golden  print_A_json_complex.golden  print_A_plain.golden  print_A_post.golden  print_A_xml.golden  print_b_json_array.golden  print_b_json_special.golden  print_b_json_vendor.golden  print_h_json.golden
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_data_formats/: data.txt  nested.json
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_download_pb/: download_chunked_output.txt  download_large_output.txt  download_medium_output.txt  download_small_output.txt
corpus/probe-plan-seeds/bat/grader/branches/fcc1fea12b08/eval/test_resources/test_errors/: connection_refused.txt  dns_failure.txt  file_not_found.txt  file_upload_requires_form.txt  invalid_json_response.txt  invalid_port.txt  invalid_url.out  no_url_error.txt  proxy_parse_error.txt  (+2 more)
corpus/probe-plan-seeds/bat/source/: README.md
corpus/probe-plan-seeds/entr/grader/: ATTRIBUTION.md
corpus/probe-plan-seeds/entr/grader/branches/365dd4330326/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/41fb392f5ccd/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/81a205a18540/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/85e09b688d6c/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/89cd9b86383b/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/98c8763e38d2/eval/: run.sh
corpus/probe-plan-seeds/entr/grader/branches/a603a1c0c055/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/aa2ac39b58a8/eval/: run.sh
corpus/probe-plan-seeds/entr/grader/branches/b302f6e95c77/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/bcc0b83fd418/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/grader/branches/fb66298e51b2/eval/: README.md  run.sh
corpus/probe-plan-seeds/entr/source/: README.md
data/: methodology.md
docs/: README.md
docs/pb/: README.md  codex-llm-runbook.md  tasks.md
docs/pb/bindings/: ariga__atlas.6d81150.json  wfxr__csview.8ac4de0.json
docs/pb/results/: README.md  atlas-20260701-083041-results.jsonl  bat-20260701-080127-results.jsonl  csview-20260701-114812-results.jsonl  entr-20260701-061958-results.jsonl
scripts/: pb-dtc-runner.sh
src/Blackbox/: Belief.hs  Classifier.hs  DTC.hs  Deepseek.hs  EmbeddedData.hs  Extract.hs  Idiom.hs  Init.hs  InnerLoop.hs  LLM.hs  Loop.hs  Oracle.hs  Plan.hs  Probe.hs  Trace.hs  Types.hs
src/Blackbox/DTC/: Binding.hs  Catalog.hs  Coverage.hs  Env.hs  Fixture.hs  PlanFromBinding.hs  Requirements.hs  Result.hs  Runner.hs  Runtime.hs  System.hs  Trigger.hs  Types.hs  Verifier.hs
src/Blackbox/DTC/Archetype/: HttpClientCli.hs  StructuredSubcommandCli.hs  TabularRenderCli.hs  WatcherCli.hs
test/: Spec.hs
(+123 files in other folders)
