cabal-version:      3.0
name:               hs-blackbox-agent
version:            0.1.0.0
synopsis:           Black-box probe agent for ProgramBench (clean-route)
license:            BSD-3-Clause
author:             kangxin
build-type:         Simple

common deps
    default-language: GHC2021
    build-depends:    base >= 4.18 && < 5,
                      text,
                      bytestring,
                      aeson,
                      containers,
                      directory,
                      filepath,
                      process,
                      mtl,
                      transformers,
                      http-client,
                      http-client-tls,
                      http-types,
                      vector,
                      file-embed,
                      template-haskell,
                      time
    ghc-options:      -Wall -Wno-unused-imports -Wno-unused-matches

library
    import:           deps
    hs-source-dirs:   src
    exposed-modules:  Blackbox.Types
                      Blackbox.Classifier
                      Blackbox.Plan
                      Blackbox.Idiom
                      Blackbox.Probe
                      Blackbox.LLM
                      Blackbox.InnerLoop
                      Blackbox.Belief
                      Blackbox.EmbeddedData
                      Blackbox.Extract

executable hsbb
    import:           deps
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    hs-blackbox-agent
    ghc-options:      -threaded

test-suite spec
    import:           deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    hs-blackbox-agent
