cabal-version:      3.0
name:               hs-blackbox-agent
version:            0.1.0.0
synopsis:           Black-box probe agent for ProgramBench (clean-route)
license:            BSD-3-Clause
author:             kangxin
build-type:         Simple

common deps
    default-language: GHC2021
    build-depends:    base >= 4.18 && < 5,
                      text,
                      bytestring,
                      aeson,
                      yaml,
                      containers,
                      directory,
                      filepath,
                      process,
                      http-client,
                      http-client-tls,
                      http-types,
                      vector,
                      time,
                      unordered-containers
    ghc-options:      -Wall -Wno-unused-imports -Wno-unused-matches

library
    import:           deps
    hs-source-dirs:   src
    exposed-modules:  Blackbox.Types
                      Blackbox.Oracle
                      Blackbox.Deepseek
                      Blackbox.Trace
                      Blackbox.Init
                      Blackbox.Loop
                      Blackbox.Belief

executable hsbb
    import:           deps
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    hs-blackbox-agent
    ghc-options:      -threaded
