cabal-version:      3.0
name:               hs-blackbox-agent
version:            0.1.0.0
synopsis:           Black-box probe agent for ProgramBench (clean-route)
license:            BSD-3-Clause
author:             kangxin
build-type:         Simple

common deps
    default-language: GHC2021
    build-depends:    base >= 4.18 && < 5,
                      text,
                      bytestring,
                      aeson,
                      directory,
                      filepath,
                      process,
                      time,
                      vector
    ghc-options:      -Wall

library
    import:           deps
    hs-source-dirs:   src
    exposed-modules:  Blackbox.DTC
                      Blackbox.DTC.Archetype.HttpClientCli
                      Blackbox.DTC.Archetype.StructuredSubcommandCli
                      Blackbox.DTC.Archetype.WatcherCli
                      Blackbox.DTC.Binding
                      Blackbox.DTC.Catalog
                      Blackbox.DTC.Coverage
                      Blackbox.DTC.Env
                      Blackbox.DTC.Fixture
                      Blackbox.DTC.PlanFromBinding
                      Blackbox.DTC.Result
                      Blackbox.DTC.Requirements
                      Blackbox.DTC.Runner
                      Blackbox.DTC.Runtime
                      Blackbox.DTC.System
                      Blackbox.DTC.Trigger
                      Blackbox.DTC.Types
                      Blackbox.DTC.Verifier

executable hsbb
    import:           deps
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    hs-blackbox-agent
    ghc-options:      -threaded
